# clapdown

./: Cargo.toml  README.md  git-derive-output.md  test.md
examples/: git-derive.rs  pacman.rs
src/: lib.rs
